// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A user is authenticated should render Header correctly 1`] = `
<header
  className="header"
>
  <div
    className="content-container"
  >
    <div
      className="header__content"
    >
      <div
        onClick={[Function]}
      >
        <a
          className="header__title"
        >
          <h1>
            Stravell
          </h1>
        </a>
      </div>
      <div
        className="header__right"
      >
        <div
          className="header__right"
        >
          <Link
            href="/dashboard"
            prefetch={true}
          >
            <withAvatarConfig
              className="header__user-photo show-for-tablet"
              round={true}
              size="40"
              src="myPhotoURL"
            />
          </Link>
          <DropDownMenu
            title="Sofiane"
          >
            <Link
              as="/p/create"
              href="/createPost"
              prefetch={true}
            >
              <button
                id="createButton"
              >
                <IoMdCreate
                  className="header__dropdown-menu-icon"
                />
                 
                Create Post
              </button>
            </Link>
            <Link
              href="/dashboard"
              prefetch={true}
            >
              <button
                id="dashboardButton"
              >
                <IoIosList
                  className="header__dropdown-menu-icon"
                />
                Dashboard
              </button>
            </Link>
            <Link
              href="/"
            >
              <button>
                <IoIosHome
                  className="header__dropdown-menu-icon"
                />
                Home
              </button>
            </Link>
            <button
              id="logOutButton"
              onClick={[MockFunction]}
            >
              <IoIosPower
                className="header__dropdown-menu-icon"
              />
               Log Out
            </button>
          </DropDownMenu>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`There is no user authenticated should render Header correctly 1`] = `
<header
  className="header"
>
  <div
    className="content-container"
  >
    <div
      className="header__content"
    >
      <div
        onClick={[Function]}
      >
        <a
          className="header__title"
        >
          <h1>
            Stravell
          </h1>
        </a>
      </div>
      <div
        className="header__right"
      >
        <DropDownMenu
          title="Main Menu"
        >
          <Link
            href="/login"
            prefetch={true}
          >
            <button>
              <IoIosLogIn
                className="header__dropdown-menu-icon"
              />
              Log in
            </button>
          </Link>
          <Link
            href="/"
          >
            <button>
              <IoIosHome
                className="header__dropdown-menu-icon"
              />
              Home
            </button>
          </Link>
        </DropDownMenu>
      </div>
    </div>
  </div>
</header>
`;
